--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>A06 Homework</title>
   </head>
   <body>
-    <h1>My class information</h1>
+    <h1>This season's guest speaker</h1>
+    <h2>Our Mission</h2>
+    <p>San Joaquin Valley Town Hall is a nor-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:
+      "Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.</p>
+    <h2>Our Ticket Packages</h2>
     <p>UCID: LFB</p>
     <p>My Name: Lucas Burgo</p>
     <p>Course name: Introduction to Web Development</p>
