--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <h1>This season's guest speaker</h1>
     <h2>Our Mission</h2>
-    <p>San Joaquin Valley Town Hall is a nor-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:
-      "Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.</p>
+    <p>San Joaquin Valley Town Hall is a nor-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:</p>
+    <p>"Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.</p>
     <h2>Our Ticket Packages</h2>
     <p>&copy; Lucas Burgo, 2025</p>
   </body>
