--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       <li>Single Speaker: $25</li>
     </ul>
     <h1>This season's guest speaker</h1>
+    <h3>
+      <br>October</br>
+      <br>David Brancaccio</br>
+    </h3>
     <p>&copy; Lucas Burgo, 2025</p>
   </body>
 </html>
