--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </ul>
     <h1>This season's guest speaker</h1>
     <h3>
-      <p>October</p>
+      <br>October</br>
       <br>David Brancaccio</br>
     </h3>
     <p>&copy; Lucas Burgo, 2025</p>
