--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<html_css_5\exercises\town_hall_1\index.html> </html_css_5>
-<html_css_5\exercises\town_hall_1\text\c3_content.txt> </html_css_5>
   <head>
     <meta charset="UTF-8">
     <title>A06 Homework</title>
@@ -19,7 +17,7 @@
     <h1>This season's guest speaker</h1>
     <h3>
       <br>October</br>
-      <br>David Brancaccio</br>
+      <a href=sorkin.html><br>David Brancaccio</br></a>
     </h3>
     <p>&copy; Lucas Burgo, 2025</p>
   </body>
