--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>A06 Homework</title>
   </head>
   <body>
+    <h1>San Joaquin Valley Town Hall</h1>
+    <h2>Celebrating our 75<sup>th</sup> Year</h2>
     <h2>Our Mission</h2>
     <p>San Joaquin Valley Town Hall is a nor-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:</p>
     <p>"Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.</p>
