--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <br>October</br>
       <a href=sorkin.html><br>David Brancaccio</br></a>
     </h3>
+    <img src=
     <p>&copy; Lucas Burgo, 2025</p>
   </body>
 </html>
