--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>A06 Homework</title>
+    <title>A05 Homework</title>
   </head>
   <body>
     <h1>San Joaquin Valley Town Hall</h1>
@@ -21,7 +21,7 @@
       <br>October</br>
       <a href=sorkin.html><br>David Brancaccio</br></a>
     </h3>
-    <img src=David.html>
+    <<img src="David.html" alt="David Brancaccio" width="75">
     <p>&copy; Lucas Burgo, 2025</p>
   </body>
 </html>
