--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <br>October</br>
       <a href=sorkin.html><br>David Brancaccio</br></a>
     </h3>
-    <<img src="David.html" alt="David Brancaccio" width="75">
+    <<img src="David.html" width="75">
     <p>&copy; Lucas Burgo, 2025</p>
   </body>
 </html>
