--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <src img ="images/town_hall_logo.gif" height=80>
   <head>
     <meta charset="UTF-8">
     <title>A05 Homework</title>
