--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <img src ="images/town_hall_logo.gif" height=80>
+  <img src ="https://cakeher.com/images/town_hall_logo.gif" height=80>
   <head>
     <meta charset="UTF-8">
     <title>A05 Homework</title>
