--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <br>October</br>
       <a href=sorkin.html><br>David Brancaccio</br></a>
     </h3>
-    <a href=David.html></a>
+    <img src=David.html>
     <p>&copy; Lucas Burgo, 2025</p>
   </body>
 </html>
