--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <br>October</br>
       <a href=sorkin.html><br>David Brancaccio</br></a>
     </h3>
-    <img src="https://aspenideasfestival.imgix.net/d50242b5-2874-48f3-b253-7e4f6c708e03/Brancaccio_David_AIF2018_0.jpg?auto=compress%2Cformat&fit=min&fm=jpg&q=80&rect=0%2C0%2C1000%2C1000" width="75">
+		<img src="images/brancaccio75.jpg" alt="David Brancaccio">
     <p>&copy; Lucas Burgo, 2025</p>
   </body>
 </html>
