--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <img src ="https://cakeher.com/images/town_hall_logo.gif" height=80>
+  <img src ="images/town_hall_logo.gif" alt = "Town Hall Logo" height=80>
   <body>
     <h1>San Joaquin Valley Town Hall</h1>
     <h2>Celebrating our 75<sup>th</sup> Year</h2>
